<resources>
    <string name="app_name">S. R. Citas</string>
    <string name="label_login">Inicio de Sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Clave</string>
    <string name="btn_login">INGRESAR</string>
    <string name="label_register">¿Aún no te has registrado?</string>
    <string name="label_name">Nombre</string>
    <string name="btn_register">Confirmar registro</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="label_registro">Registro</string>
    <string name="please_fill_you_register_data">Por favor completa sus datos</string>
    <string name="btn_create_appointment">Reservar cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_log_out">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripción</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="date_format">%1$d-%2$s-%3$s</string>

    <string name="item_appointment_id">Cita Médica %1$d</string>
    <string name="item_appointment_date">Atención el día %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="label_my_appointments">Mis citas médicas</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="dialog_exit_create_appointment">¿Estás seguro que deseas salir?</string>
    <string name="dialog_exit_create_appointment_message">Se perderán todos los datos ingresados</string>
    <string name="dialog_exit_create_appointment_positive">Salir</string>
    <string name="dialog_exit_create_appointment_negative">Continuar registro</string>
    <string name="validate_appointment_description">La descripción es demasiado corta</string>
    <string name="label_scheduled_time">Hora de la cita</string>
    <string name="label_confirm_appointment">Datos de la cita</string>
    <string name="validate_appointment_date">Seleccionar una fecha</string>
    <string name="validate_appointment_time">Seleccionar hora</string>
    <string name="label_error_loading_specialties">Upss.. ocurrió un problema al cargar las especialidades</string>
    <string name="label_error_loading_doctors">Upss.. ocurrió un problema al cargar los médicos</string>
    <string name="error_loading_hours">No se han podido cargar las horas</string>
    <string name="label_select_doctor_date">Seleccione un médico y una fecha para ver sus horas disponibles.</string>
    <string name="label_not_available_day">No se encontraron horas disponibles para el médico en el dia seleccionado.</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y contraseña</string>
    <string name="create_appointment_success">Cita registrada correctamente</string>
    <string name="create_appointmet_error">Ocurrio un error inesperado</string>
    <string name="label_password_confirmation">Confirmar Clave</string>
    <string name="error_register_empty_fields">Por favor completar todos los campos</string>
    <string name="error_register_password_match">Las contraseñas no coinciden</string>
    <string name="error_register_validation">Ocurrio un error en el registro</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="btn_edit_profile">Editar perfil</string>
    <string name="label_edit_profile">Editar datos de básicos</string>
    <string name="label_phone">Número de teléfono</string>
    <string name="label_address">Dirección</string>
    <string name="btn_save">guardar cambios</string>
    <string name="profile_success_save">Los cambios se han guardado correctamente</string>
    <string name="error_profile_name">El nombre ingresado es muy corto</string>
    <string name="you_need_a_phone">Es necesario asociar un telefono</string>
    <string name="label_login_help">Usa el siguiente formulario para logearte !</string>


</resources>
