<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.MenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:text="@string/label_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnCreateAppointment"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:text="@string/btn_create_appointment" />

    <Button
        android:id="@+id/btnMyAppointments"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:text="@string/btn_my_appointments" />

    <Button
        android:id="@+id/btnLogout"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_marginBottom="25dp"
        android:text="@string/btn_log_out" />

</LinearLayout>